<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_padding">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calender_current_date"
            style="@style/Header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingTop="4dp" />

        <ImageView
            android:id="@+id/add_vocab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/add_vocab_desc"
            android:src="@drawable/ic_action_add_vocab_light" />

        <ImageView
            android:id="@+id/overflow_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/open_prefs_desc"
            android:src="@drawable/ic_action_overflow_light" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/widget_background"
            tools:ignore="ContentDescription" />
        
        <TextView
            android:id="@+id/empty_vocab_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/definition_padding"
            android:text="@string/no_available_vocabulary"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </FrameLayout>


</LinearLayout>